--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build": "nuxt build --dotenv .env.production",
+    "dev": "nuxt dev --dotenv .env.development",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
+    "echarts": "^5.5.0",
+    "tdesign-vue-next": "^1.9.3",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
@@ -19,16 +21,19 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@tdesign-vue-next/nuxt": "^0.1.3",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.22.0",
     "less": "^4.2.0",
-    "nuxt": "^3.11.1",
+    "nuxt": "^3.11.2",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
     "typescript": "^5.3.3",
-    "vue-tsc": "^2.0.4"
+    "vue-tsc": "^1"
   }
 }
