--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@tdesign-vue-next/nuxt": "^0.1.3",
+    "@unocss/nuxt": "^0.59.4",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
@@ -34,6 +35,7 @@
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
     "typescript": "^5.3.3",
+    "unocss": "^0.59.4",
     "vue-tsc": "^1"
   }
 }
