--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,9 @@
 {
     "useTabs": false,
     "tabWidth": 2,
-    "trailingComma": "none",
-    "semi": true,
-    "singleQuote": true,
+    "semi": false,
     "vueIndentScriptAndStyle": false,
     "printWidth": 160,
-    "bracketSameLine": false
+    "bracketSameLine": false,
+    "singleQuote": true
   }
