--- a/package.json
+++ b/package.json
@@ -8,34 +8,37 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "echarts": "^5.5.0",
-    "tdesign-vue-next": "^1.9.3",
-    "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "unocss": "^0.60.2",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.0.8",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/eslint-module": "^4.1.0",
+    "@formkit/auto-animate": "^0.8.2",
+    "@iconify-json/carbon": "^1.1.33",
+    "@nuxt/devtools": "^1.3.1",
+    "@nuxt/eslint": "^0.3.12",
+    "@nuxt/image": "^1.7.0",
+    "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@tdesign-vue-next/nuxt": "^0.1.3",
-    "@unocss/nuxt": "^0.59.4",
+    "@unocss/nuxt": "^0.60.2",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.22.0",
+    "eslint-plugin-vue": "^9.26.0",
     "less": "^4.2.0",
     "nuxt": "^3.11.2",
+    "nuxt-icon": "^0.6.10",
     "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "typescript": "^5.3.3",
-    "unocss": "^0.59.4",
-    "vue-tsc": "^1"
+    "stylelint": "^16.5.0",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^1.8.27"
   }
 }
