--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-NUXT_PUBLIC_SERVER=http://124.220.78.194:8000
-NUXT_PUBLIC_API_BASE='/api'
+NUXT_PUBLIC_SERVER=https://gjoldb.info:8000
+# NUXT_PUBLIC_API_BASE='/api'
+NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
 
