--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "echarts": "^5.5.0",
-    "unocss": "^0.60.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "echarts": "^5.6.0",
+    "moment": "^2.30.1",
+    "unocss": "^66.0.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@iconify-json/carbon": "^1.1.33",
-    "@nuxt/devtools": "^1.3.1",
-    "@nuxt/eslint": "^0.3.12",
-    "@nuxt/image": "^1.7.0",
-    "@nuxtjs/color-mode": "^3.4.1",
+    "@iconify-json/carbon": "^1.2.8",
+    "@nuxt/devtools": "^2.3.2",
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@unocss/nuxt": "^0.60.2",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@unocss/nuxt": "^66.0.0",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/nuxt": "^13.0.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
-    "less": "^4.2.0",
-    "nuxt": "^3.11.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-vue": "^10.0.0",
+    "less": "^4.2.2",
+    "nuxt": "^3.16.2",
     "nuxt-icon": "^0.6.10",
-    "prettier": "^3.2.5",
-    "stylelint": "^16.5.0",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^1.8.27"
+    "prettier": "^3.5.3",
+    "stylelint": "^16.17.0",
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   }
 }
