refactor: 更新API代理和配置文件以优化请求处理
更新了tsconfig.json以支持ES模块，调整了.env.production和.env.development中的环境变量配置。新增了api-proxy.ts中间件以处理API请求路径，并移除了pages/index.vue中未使用的代码。此外，优化了nuxt.config.ts中的模块配置和类型检查设置。

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NUXT_PUBLIC_SERVER=https://gjoldb.info:8000
-# NUXT_PUBLIC_API_BASE='/api'
-NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
+NUXT_PUBLIC_SERVER="https://gjoldb.info/api"
+NUXT_PUBLIC_API_BASE='/api'
+# NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
 
