--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-NUXT_PUBLIC_SERVER=https://gjoldb.info/api
-# NUXT_PUBLIC_API_BASE='/api'
-NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
-
+NUXT_PUBLIC_SERVER="https://gjoldb.info/api"
+NUXT_PUBLIC_API_BASE='/api'
+# NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
