--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NUXT_PUBLIC_SERVER="https://gjoldb.info/api"
-NUXT_PUBLIC_API_BASE='/api'
+NUXT_PUBLIC_API_BASE='http://localhost:8000'
 # NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
