--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "echarts": "^5.6.0",
     "moment": "^2.30.1",
+    "openapi-typescript": "^7.6.1",
+    "ufo": "^1.5.4",
     "unocss": "^66.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
