--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "echarts": "^5.6.0",
