--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NUXT_PUBLIC_API_BASE='http://localhost:8000'
+NUXT_PUBLIC_API_BASE='http://127.0.0.1:8000'
 # NUXT_PUBLIC_API_BASE='https://gjoldb.info/api'
