--- a/package.json
+++ b/package.json
@@ -13,36 +13,39 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
-    "echarts": "^5.6.0",
+    "echarts": "^6.0.0",
     "moment": "^2.30.1",
-    "openapi-typescript": "^7.8.0",
+    "openapi-typescript": "^7.9.1",
     "ufo": "^1.6.1",
-    "unocss": "^66.1.2",
-    "vue": "^3.5.14",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@iconify-json/carbon": "^1.2.8",
-    "@nuxt/devtools": "^2.4.1",
-    "@nuxt/eslint": "^1.4.1",
+    "@iconify-json/material-symbols": "^1.2.33",
+    "@nuxt/devtools": "^2.6.2",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@unocss/nuxt": "^66.1.2",
-    "@vueuse/core": "^13.2.0",
-    "@vueuse/nuxt": "^13.2.0",
-    "eslint": "^9.27.0",
+    "@unocss/nuxt": "^66.5.0",
+    "@vueuse/core": "^13.9.0",
+    "@vueuse/nuxt": "^13.9.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.1.0",
     "less": "^4.3.0",
-    "nuxt": "^4.0.3",
+    "nuxt": "^4.1.1",
     "nuxt-icon": "^0.6.10",
     "prettier": "^3.5.3",
     "stylelint": "^16.19.1",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.0",
+    "unocss": "^66.5.0",
     "vue-tsc": "^2.2.10"
+  },
+  "overrides": {
+    "@typescript-eslint/typescript-estree": "^8.35.0"
   }
 }
