--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "deploy": "sh deploy.sh"
+    "deploy": "sh deploy.sh",
+    "generate-types": "npx openapi-typescript http://127.0.0.1:8000/openapi.json -o ./app/api-types/api.d.ts"
   },
   "dependencies": {
     "echarts": "^6.0.0",
-    "moment": "^2.30.1",
     "openapi-typescript": "^7.9.1",
     "ufo": "^1.6.1",
     "vue": "^3.5.21",
