--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "deploy": "sh deploy.sh",
-    "generate-types": "npx openapi-typescript http://127.0.0.1:8000/openapi.json -o ./app/api-types/api.d.ts"
+    "types": "npx openapi-typescript http://127.0.0.1:8000/openapi.json -o ./app/api-types/api.d.ts"
   },
   "dependencies": {
     "echarts": "^6.0.0",
