--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,3 @@
-node_modules
-.nuxt
-.git
-.vscode
-*.log
-npm-debug.log*
-.DS_Store
-README.md
-.env*
-!.env.production
+# 只保留构建产物，排除其他所有文件
+*
+!.output/public
