feat: 添加@ark-ui/vue组件库并实现工具提示和折叠功能
- 添加@ark-ui/vue组件库依赖
- 创建itsme.vue组件实现工具提示功能
- 在version.vue中使用折叠组件展示详细说明
- 添加新的阴影样式rambling-shadow-up
- 简化useChartsColorMode调用方式

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "types": "npx openapi-typescript http://127.0.0.1:8000/openapi.json -o ./app/api-types/api.d.ts"
   },
   "dependencies": {
+    "@ark-ui/vue": "^5.25.1",
     "echarts": "^6.0.0",
     "openapi-typescript": "^7.9.1",
     "ufo": "^1.6.1",
