--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "types": "npx openapi-typescript http://127.0.0.1:8000/openapi.json -o ./app/api-types/api.d.ts"
   },
   "dependencies": {
-    "@ark-ui/vue": "^5.25.1",
+    "@ark-ui/vue": "^5.26.0",
     "echarts": "^6.0.0",
     "openapi-typescript": "^7.9.1",
     "ufo": "^1.6.1",
-    "vue": "^3.5.21",
+    "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@formkit/auto-animate": "^0.8.4",
+    "@formkit/auto-animate": "^0.9.0",
     "@iconify-json/material-symbols": "^1.2.34",
-    "@nuxt/devtools": "^2.6.3",
+    "@nuxt/devtools": "^2.6.5",
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@unocss/nuxt": "^66.5.1",
+    "@unocss/nuxt": "^66.5.2",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
     "eslint": "^9.35.0",
@@ -37,13 +37,13 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.4.0",
     "less": "^4.4.1",
-    "nuxt": "^4.1.1",
-    "nuxt-icon": "^0.6.10",
+    "nuxt": "^4.1.3",
+    "nuxt-icon": "1.0.0-beta.7",
     "prettier": "^3.6.2",
     "stylelint": "^16.24.0",
-    "typescript": "^5.9.2",
-    "unocss": "^66.5.1",
-    "vue-tsc": "^2.2.12"
+    "typescript": "^5.9.3",
+    "unocss": "^66.5.2",
+    "vue-tsc": "^3.1.1"
   },
   "overrides": {
     "@typescript-eslint/typescript-estree": "^8.35.0"
