--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "devDependencies": {
     "@formkit/auto-animate": "^0.9.0",
     "@iconify-json/material-symbols": "^1.2.34",
+    "@iconify-json/tabler": "^1.2.23",
     "@nuxt/devtools": "^2.6.5",
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@unocss/nuxt": "^66.5.2",
+    "@unocss/preset-icons": "^66.5.3",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
     "eslint": "^9.35.0",
