--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nuxt": "^4.1.3",
     "nuxt-icon": "1.0.0-beta.7",
     "prettier": "^3.6.2",
+    "rollup-plugin-visualizer": "^6.0.4",
     "stylelint": "^16.24.0",
     "typescript": "^5.9.3",
     "unocss": "^66.5.2",
