--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: Deploy GjolWeb
+
 on:
   push:
     branches: [ "dev" ]
   workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,41 +18,44 @@ jobs:
       DEPLOY_CONTAINER_NAME: gjol-nuxt
       DEPLOY_CONTAINER_PORT: 3001
       DEPLOY_RUNTIME: podman
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
+
       - name: Setup PNPM
         uses: pnpm/action-setup@v3
         with:
           version: 9
           run_install: false
+
       - name: Ensure PNPM is available
         run: |
           node -v
           corepack enable || true
           corepack prepare pnpm@9 --activate || npm i -g pnpm@9
           pnpm -v
-      - name: Ensure PNPM is available
-        run: |
-          node -v
-          corepack enable || true
-          corepack prepare pnpm@9 --activate || npm i -g pnpm@9
-          pnpm -v
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Build project
+        run: pnpm run build
+
       - name: Prepare SSH key and known_hosts
         run: |
           mkdir -p ~/.ssh
           echo "${{ env.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "$DEPLOY_SERVER_IP" >> ~/.ssh/known_hosts
-      - name: Run deploy script
-        env:
-          DEPLOY_SSH_KEY: ~/.ssh/id_rsa
+
+      - name: Deploy to server
         run: |
-          bash ./deploy.sh
+          rsync -avz --delete ./ $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP:$DEPLOY_SERVER_PATH
+          ssh $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP "cd $DEPLOY_SERVER_PATH && DEPLOY_IMAGE_TAG=$DEPLOY_IMAGE_TAG DEPLOY_IMAGE_NAME=$DEPLOY_IMAGE_NAME DEPLOY_CONTAINER_NAME=$DEPLOY_CONTAINER_NAME DEPLOY_CONTAINER_PORT=$DEPLOY_CONTAINER_PORT DEPLOY_RUNTIME=$DEPLOY_RUNTIME bash ./actionsDeploy.sh"
