ci(workflow): 优化部署工作流中的pnpm设置和构建步骤
简化pnpm的安装流程，移除冗余步骤
将构建命令改为生成静态站点并指定生产环境变量

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,23 +30,17 @@ jobs:
           cache: 'pnpm'
 
       - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 9
-          run_install: false
-
-      - name: Ensure PNPM is available
         run: |
           node -v
-          corepack enable || true
-          corepack prepare pnpm@9 --activate || npm i -g pnpm@9
+          corepack enable
+          corepack prepare pnpm@9 --activate
           pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build project
-        run: pnpm run build
+      - name: Generate static site
+        run: pnpm run generate -- --dotenv .env.production
 
       - name: Prepare SSH key and known_hosts
         run: |
