ci(workflow): 更新部署工作流以同步特定文件和目录
修改 rsync 命令以仅同步 .output/public/ 目录和必要的部署文件，避免同步不必要的文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,6 @@ jobs:
 
       - name: Deploy to server
         run: |
-          rsync -avz --delete ./ $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP:$DEPLOY_SERVER_PATH
+          rsync -avz --delete .output/public/ $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP:$DEPLOY_SERVER_PATH/.output/public/
+          rsync -avz Dockerfile actionsDeploy.sh $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP:$DEPLOY_SERVER_PATH/
           ssh $DEPLOY_SERVER_USER@$DEPLOY_SERVER_IP "cd $DEPLOY_SERVER_PATH && DEPLOY_IMAGE_TAG=$DEPLOY_IMAGE_TAG DEPLOY_IMAGE_NAME=$DEPLOY_IMAGE_NAME DEPLOY_CONTAINER_NAME=$DEPLOY_CONTAINER_NAME DEPLOY_CONTAINER_PORT=$DEPLOY_CONTAINER_PORT DEPLOY_RUNTIME=$DEPLOY_RUNTIME bash ./actionsDeploy.sh"
