--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.4.0",
     "less": "^4.4.1",
-    "nuxt": "^4.1.3",
+    "nuxt": "^4.2.1",
     "nuxt-icon": "1.0.0-beta.7",
     "prettier": "^3.6.2",
     "rollup-plugin-visualizer": "^6.0.4",
     "stylelint": "^16.24.0",
     "typescript": "^5.9.3",
     "unocss": "^66.5.2",
+    "vite": "^7.2.2",
     "vue-tsc": "^3.1.1"
   },
   "overrides": {
