--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build --dotenv .env.production",
     "dev": "nuxt dev --dotenv .env.development",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate --dotenv .env.production",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
@@ -18,8 +18,7 @@
     "echarts": "^6.0.0",
     "openapi-typescript": "^7.9.1",
     "ufo": "^1.6.1",
-    "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.9.0",
